# wgpu-abc-helper

./: .gitignore  .pre-commit-config.yaml  .rustfmt.toml  BUILD.gn  Cargo.toml  README.md  REUSE.toml  build.rs  cbindgen.toml
.github/workflows/: cffi.yml  rust.yml
examples/: abce-solve-json.rs  matmul.json  matmul2.json  tensorflow-solve.json
ffi_examples/: Makefile  main.cpp
ffi_headers/: REUSE.toml  abc_footer_defns.hpp  abc_forward_decls.hpp  wgpu_abc_helper.hpp
include/wgpu-abc-helper/: wgpu_abc_helper.hpp
proofs/: README.md  signed_div.smt2  signed_mul.smt2  unsigned_mul.smt2
src/: cffi.rs  ffi_bindings.rs  helper.rs  lib.rs  macros.rs
src/helper/: converter.rs  interface.rs  mod.rs
src/solvers/: mod.rs  smt.rs
src/solvers/interval/: compound.rs  mod.rs  ops.rs  private.rs  translator.rs
src/solvers/interval/translator/: mod.rs  resolver.rs
tests/: test_dtc.rs
