import("//build/rust/rust_static_library.gni")

rust_static_library("wgpu_abc_helper_rlib") {
  sources = [
    "src/lib.rs",
    "src/cffi.rs",
    "src/helper/converter.rs",
    "src/helper/interface.rs",
    "src/helper/mod.rs",
    "src/macros.rs",
    "src/solvers/mod.rs",
    "src/solvers/interval/mod.rs",
    "src/solvers/interval/compound.rs",
    "src/solvers/interval/ops.rs",
    "src/solvers/interval/translator/mod.rs",
    "src/solvers/interval/translator/resolver.rs"
  ]

  deps = [
    "//third_party/rust/lazy_static/v1:lib",
    "//third_party/rust/strum/v0_27:lib",
    "//third_party/rust/strum_macros/v0_27:lib",
    "//third_party/rust/thiserror/v1:lib",
    "//third_party/rust/rustc_hash/v1:lib",
    "//third_party/rust/log/v0_4:lib",
    "//third_party/rust/serde/v1:lib",
    "//third_party/rust/serde_json/v1:lib",
    "//third_party/rust/ffi_support/v0_4:lib",
    "//third_party/rust/bitflags/v2:lib",
    "//third_party/rust/num/v0_4:lib",
  ]
  features = [
    "cffi",
  ]
  
  inputs = [
    "version.txt"
  ]

  allow_unsafe = true

  public_configs = [
    ":wgpu_abc_helper_config"
  ]
}

config("wgpu_abc_helper_config") {
   include_dirs = ["include"]
}