# SPDX-FileCopyrightText: 2024 University of Rochester
#
# SPDX-License-Identifier: MIT OR Apache-2.0
[package]
name = "abc-helper"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "An array bounds checking solver for wgsl compilers"

[dependencies]
lazy_static = { version = "1.4.0"}
strum = "0.26.3"
strum_macros = "0.26.4"
thiserror = "1.0.63"
rustc-hash = "1.1.0"
log = "0.4.22"
serde = { version = "1.0.130", features = ["derive", "rc"], optional = true }
serde_json = {version = "1.0.68", optional = true}
arbitrary = { version = "1.3", features = ["derive"], optional = true }
ffi-support = { version = "0.4.4", optional = true }
async-std = { version = "1.10.0", optional = true }

[build-dependencies]
cbindgen = {version = "0.24.0", optional = true}

[features]
serialize = ["dep:serde", "serde_json"]
deserialize = ["dep:serde", "serde_json"]
arbitrary = ["dep:arbitrary"]
cffi = ["dep:cbindgen", "dep:ffi-support", "dep:async-std"]



[lib]
crate-type = ["rlib", "cdylib"]

[dev-dependencies]
rstest = "0.22.0"


[package.metadata.clippy]
allow = ["clippy::must_use_candidate"]