# SPDX-FileCopyrightText: 2024 University of Rochester
#
# SPDX-License-Identifier: MIT OR Apache-2.0
[package]
name = "abc-helper"
version = "0.6.1"
authors = ["Benjamin Valpey"]
edition = "2021"
description = "An array bounds checking solver for wgsl compilers"
repository = "github.com:pyxis-roc/wgpu-abc-helper.git"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
lazy_static = { version = "1.4.0" }
strum = "0.26.3"
strum_macros = "0.26.4"
thiserror = "1.0.65"  # Note: This cannot diverge from the version in wgpu.
rustc-hash = "1.1.0"
log = "0.4.22"
serde = { version = "1.0.210", features = ["derive", "rc"], optional = true }
serde_json = { version = "1.0.128", optional = true }
arbitrary = { version = "1.3", features = ["derive"], optional = true }
ffi-support = { version = "^0.4.4", optional = true }
bitflags = {version = "^2.6.0"}
num = {version = "^0.4.0"}
multiversion = "0.7.4"

[build-dependencies]
cbindgen = { version = "0.28.0", optional = true }

[features]
serialize = ["dep:serde", "serde_json", "bitflags/serde"]
deserialize = ["dep:serde", "serde_json", "bitflags/serde"]
arbitrary = ["dep:arbitrary", "bitflags/arbitrary"]
cffi = ["dep:cbindgen", "dep:ffi-support", "serialize"]


[lib]
crate-type = ["rlib", "cdylib"]

[dev-dependencies]
rstest = "0.22.0"
env_logger = "0.10.0"

[lints.rust]
# Add rust_analyzer as a valid cfg lint.
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(rust_analyzer)'] } 


# We turn on clippy::pedantic
[lints.clippy]
pedantic = {level = "warn"}
must_use_candidate = {level = "allow", priority = 1}
default_trait_access = {level = "allow", priority = 1}
module_name_repetitions = {level = "allow", priority = 1} # We have FFI functions that need to have module names repeated.
wildcard_imports = {level = "allow", priority = 1} # Wildcard imports are fine. Anything else is too verbose.
